# cpp-projects

./: .gitignore  README.md  vl_string.hpp  vl_vector.hpp
multi-layer-perceptron/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  autotest_utils.h  main.cpp
recommendation-system/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h
